--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/betweenlines/zfilexfer"
 
 [dev-dependencies]
 
-tempdir = "0.3.*"
+tempdir = "0.3"
 
 [dependencies]
 
