--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ tempdir = "0.3"
 [dependencies]
 
 czmq = { git = "https://github.com/petehayes102/rust-czmq.git", branch = "dev" }
+rustc-serialize = "0.3"
 zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", branch = "dev" }
