--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ tempdir = "0.3"
 crc = "1.2"
 czmq = { git = "https://github.com/petehayes102/rust-czmq.git", branch = "dev" }
 rustc-serialize = "0.3"
-zdaemon = { git = "https://github.com/betweenlines/zdaemon.git" }
+zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", branch = "dev" }
