--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ tempdir = "0.3"
 [dependencies]
 
 crc = "1.2"
-czmq = { git = "https://github.com/petehayes102/rust-czmq.git", tag = "0.0.5" }
+# czmq = { git = "https://github.com/petehayes102/rust-czmq.git", tag = "0.0.5" }
+czmq = { git = "https://github.com/petehayes102/rust-czmq.git", branch = "dev" }
 rustc-serialize = "0.3"
-zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", tag = "0.0.1" }
+# zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", tag = "0.0.1" }
+zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", branch = "dev" }
