--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/betweenlines/zfilexfer"
 [dev-dependencies]
 
 tempdir = "0.3"
+tempfile = "2.1"
 
 [dependencies]
 
