--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zfilexfer"
-version = "0.0.1"
+version = "0.0.2"
 authors = [ "Peter Hayes <peter.hayes@betweenlines.co.uk>" ]
 license = "MPL-2.0"
 description = "File transfer over ZMQ sockets."
@@ -15,8 +15,6 @@ tempfile = "2.1"
 [dependencies]
 
 crc = "1.2"
-# czmq = { git = "https://github.com/petehayes102/rust-czmq.git", tag = "0.0.5" }
-czmq = { git = "https://github.com/petehayes102/rust-czmq.git", branch = "dev" }
+czmq = "0.1"
 rustc-serialize = "0.3"
-# zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", tag = "0.0.1" }
-zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", branch = "dev" }
+zdaemon = "0.0.2"
